--- a/assets/index.html.tmpl
+++ b/assets/index.html.tmpl
@@ -3,5 +3,5 @@
 		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
 		<script src="/assets/script/script.js" type="text/javascript"></script>
 	</head>
-	<body>A beginning.</body>
+	<body>Hello, world of {{.Animals}}!</body>
 </html>
