--- a/assets/index.html.tmpl
+++ b/assets/index.html.tmpl
@@ -1,7 +1,10 @@
 <html>
 	<head>
 		<link href="/assets/style.css" rel="stylesheet" type="text/css" />
-		<script src="/assets/script/script.js" type="text/javascript"></script>
 	</head>
-	<body>Hello, world of {{.Animals}}!</body>
+	<body>
+		<p>Hello, world of {{.Animals}}!</p>
+
+		<script src="/assets/script/script.js" type="text/javascript"></script>
+	</body>
 </html>
